--- a/databinding-start/src/app/server-element/server-element.component.html
+++ b/databinding-start/src/app/server-element/server-element.component.html
@@ -4,7 +4,7 @@
   <div class="card-body">
   <!--This directive is used to insert the custom html from where this component is declared-->
     <ng-content></ng-content>
-<!--    <p>-->
+<!--    <p #contentParagraph>-->
 <!--      <strong *ngIf="element.type === 'server'" style="color: red">{{ element.content }}</strong>-->
 <!--      <em *ngIf="element.type === 'blueprint'">{{ element.content }}</em>-->
 <!--    </p>-->
