--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -5,7 +5,7 @@
       <hr>
       <app-servers></app-servers>
 <!--      <app-carousel></app-carousel>-->
-      <app-async-promise-pipe></app-async-promise-pipe>
+<!--      <app-async-promise-pipe></app-async-promise-pipe>-->
     </div>
   </div>
 </div>
