--- a/contact-management/src/app/app.component.html
+++ b/contact-management/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>
+<!-- <header>
   <h1>This is static header</h1>
   <div class="dropdown">
     <a href="#">Settings</a>
@@ -8,9 +8,10 @@
       <li><a class="dropdown-item" href="#">Logout</a></li>
     </ul>
   </div>
-</header>
+</header> -->
+<app-header></app-header>
 <hr>
-<!--<app-login></app-login>-->
-<!--<app-register></app-register>-->
+<!-- <app-login></app-login> -->
+<!-- <app-register></app-register> -->
 <app-dashboard></app-dashboard>
-<!--<app-settings></app-settings>-->
+<!-- <app-settings></app-settings> -->
