--- a/contact-management/src/app/header/header.component.html
+++ b/contact-management/src/app/header/header.component.html
@@ -1,23 +1,9 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Book</a>
-    </div>
-
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Shopping List</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
+  <div class="navbar-header">
+    <h1><a href="">This static header!</a></h1>
+  </div>
+  <div class="navbar navbar-right">
+    <a href="#">Add Contact</a>
+    <a href="#">Settings</a>
   </div>
 </nav>
